--- a/py_course/functional_pro/functions.ipynb
+++ b/py_course/functional_pro/functions.ipynb
@@ -583,13 +583,14 @@
     "arguments:\n",
     "arguments are 2 types\n",
     "1.formaal arguments\n",
-    "1.actual arguments\n",
+    "2.actual arguments\n",
     "FORMAL Args: \n",
-    "1.we have to define inside the funtion deffination\n",
-    "2. this args we can represent in 3 ways\n",
-    "   1.positional or non defoult args\n",
-    "   2.defoult args or mandatory args\n",
-    "   3.variable length args\n",
+    "   1.we have to define inside the funtion deffination\n",
+    "   2. this args we can represent in 3 ways\n",
+    "      1.positional or non defoult args\n",
+    "      2.defoult args or mandatory args\n",
+    "      3.variable length args\n",
+    "\n",
     "1.POSITIONAL args:they are difined inside the funtion deffination in the form of variable names\n",
     "\n"
    ]
@@ -644,12 +645,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "actual args: \n",
-    "1.we have to define the actual args inside the function calling\n",
-    "2.actual args can represent in 3 ways\n",
-    "  1. positional args\n",
-    "  2.key word args\n",
-    "  3.variable length args"
+    "2.actual args: \n",
+    "  1.we have to define the actual args inside the function calling\n",
+    "  2.actual args can represent in 3 ways\n",
+    "    1. positional args\n",
+    "    2.key word args\n",
+    "    3.variable length args"
    ]
   },
   {
@@ -727,18 +728,18 @@
    "metadata": {},
    "source": [
     "3.variable length args:\n",
-    "1.we can define inside the function deffination or function call\n",
-    "2.it will accept 0 args or more than 0 args (values)\n",
-    "3. it classified into 2 types\n",
-    "   1.tuple variable args\n",
-    "   2.dictionary variable args\n",
+    "   1.we can define inside the function deffination or function call\n",
+    "   2.it will accept 0 args or more than 0 args (values)\n",
+    "   3. it classified into 2 types\n",
+    "      1.tuple variable args\n",
+    "      2.dictionary variable args\n",
     "\n",
     "1.Tuple variable args:\n",
-    "1. we have to define single *followed by variable name\n",
-    "2.it will accept only positional args from the fuction call\n",
-    "3.all the args will store inside the tuple collection\n",
-    "4.as industrial standard we have to define full variable args (*args)\n",
-    "4.as industrial standard we have to define full tuple variable args (**kwargs)   (key_word_args)\n"
+    "   1. we have to define single *followed by variable name\n",
+    "   2.it will accept only positional args from the fuction call\n",
+    "   3.all the args will store inside the tuple collection\n",
+    "   4.as industrial standard we have to define full variable args (*args)\n",
+    "   4.as industrial standard we have to define full tuple variable args (**kwargs)   (key_word_args)\n"
    ]
   },
   {
@@ -769,10 +770,10 @@
    "metadata": {},
    "source": [
     "2.dictionary variable length args\n",
-    "1. we have to define single **followed by key_word_args\n",
-    "2.it will accept only key_word_args\n",
-    "3.all args will store in the form of dict formate\n",
-    "4.as industrial standard we are represent the args name called **args"
+    "    1. we have to define single **followed by key_word_args\n",
+    "    2.it will accept only key_word_args\n",
+    "    3.all args will store in the form of dict formate\n",
+    "    4.as industrial standard we are represent the args name called **args"
    ]
   },
   {
@@ -1094,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
