--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -1510,6 +1510,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CONSTRUCTOR CHAINING:\n",
+    "    . It is a phenomenon invoking the constructor from parent class to the constructor of child class is called constructor chaining.\n",
+    "    . Invoking from one constructor to another constructor is known as constructor chaining.\n",
+    "    . by through constructor chaining to reduce code redundancy and eliminate repetitive task.\n",
+    "    . There are 3 ways to call to achive the constructor chaining.\n",
+    "    \n",
+    "    1.Calling by using the super statement.\n",
+    "        SYNTAX:\n",
+    "            super().__init__(arguments)\n",
+    "                NOte:super() refers to parent class address\n",
+    "\n",
+    "    2.Calling by using super containing arguments.\n",
+    "        SYNTAX:\n",
+    "            super(childClassName,self).__init__(arguments)\n",
+    "        \n",
+    "    3.Calling by using parent class name.\n",
+    "        SYNTAX:\n",
+    "            parent.__init__(self,arguments)\n",
+    "\n",
+    "\n",
+    "super():\n",
+    "1.It is a predefine function.\n",
+    "2.It will point/refer the parent class address."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -1543,6 +1572,407 @@
     "dinga=student2('dinga','122',446464,'dsfkjl@gmail.com',78)\n",
     "print(dinga.__dict__)\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "multi-level inheritance:\n",
+    "    1. its phenomenon of deriving  the properties parent class to child class and child class properties are derived to grand child class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'__module__': '__main__', 'a': 10, '__init__': <function parent.__init__ at 0x0000025B7B0EF490>, '__dict__': <attribute '__dict__' of 'parent' objects>, '__weakref__': <attribute '__weakref__' of 'parent' objects>, '__doc__': None}\n",
+      "{'x': 150}\n",
+      "{'__module__': '__main__', 'b': 20, '__doc__': None}\n",
+      "{'x': 256}\n",
+      "{'__module__': '__main__', 'c': 30, '__doc__': None}\n",
+      "10 20 30\n",
+      "{'x': 490}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class parent:\n",
+    "    a=10\n",
+    "    def __init__(self,x):\n",
+    "        self.x=x\n",
+    "xyz=parent(150)\n",
+    "\n",
+    "print(parent.__dict__)\n",
+    "print(xyz.__dict__)\n",
+    "\n",
+    "class child(parent):\n",
+    "    b=20\n",
+    "\n",
+    "abc=child(256)\n",
+    "print(child.__dict__)\n",
+    "print(abc.__dict__)\n",
+    "\n",
+    "class grandchild(child):\n",
+    "    c=30\n",
+    "mno=grandchild(490)\n",
+    "\n",
+    "print(grandchild.__dict__)\n",
+    "# print(grandchild.a,grandchild.b,grandchild.c)\n",
+    "print(mno.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10 20\n",
+      "10 20 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(parent.a)\n",
+    "print(child.a,child.b)\n",
+    "print(grandchild.a,grandchild.b,grandchild.c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "420\n",
+      "420 20\n",
+      "420 20 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "parent.a=420\n",
+    "print(parent.a)\n",
+    "print(child.a,child.b)\n",
+    "print(grandchild.a,grandchild.b,grandchild.c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n",
+      "420 20\n",
+      "420 20 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "parent.a=40\n",
+    "child.a=420\n",
+    "print(parent.a)\n",
+    "print(child.a,child.b)\n",
+    "print(grandchild.a,grandchild.b,grandchild.c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n",
+      "420 20\n",
+      "89 20 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "grandchild.a=89\n",
+    "print(parent.a)\n",
+    "print(child.a,child.b)\n",
+    "print(grandchild.a,grandchild.b,grandchild.c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.hierarchichal inheritance:\n",
+    "    1.Deriving the properties one parent class to two are more child classes known as hierarchical inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class college:\n",
+    "    cname='vikas'\n",
+    "    address='hyd'\n",
+    "    def __init__(self,name,age,phone,type_of_p,doj):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "        self.phone=phone\n",
+    "        self.type_of_p=type_of_p\n",
+    "        self.doj=doj\n",
+    "\n",
+    "    def display(self):\n",
+    "        print('collage name:',self.cname)\n",
+    "        print('collage address:',self.address)\n",
+    "        print('person name:',self.name)\n",
+    "        print('person phone:',self.phone)\n",
+    "        print('person age:',self.age)\n",
+    "        print('person type_of_p:',self.type_of_p)\n",
+    "        print('person doj:',self.doj)\n",
+    "        \n",
+    "krishna=college('krishna',25,349809832,'student','01/3/2020')\n",
+    "krishna_raj=college('krishna_raj',37,98909832488,'teacher','25/2/1999')\n",
+    "\n",
+    "\n",
+    "class college1(college):\n",
+    "    address='vijayavada'\n",
+    "\n",
+    "ram=college1('ram',24,77944356,'student','30/4/2021')\n",
+    "seetha=college1('seetha',28,77947979,'trainer','30/8/2022')\n",
+    "\n",
+    "class college2(college):\n",
+    "    address='mysure'\n",
+    "\n",
+    "stu1=college2('ramdsf',243,779443567898,'student','30/4/2024')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "class college3(college):\n",
+    "    address='mysure'\n",
+    "    def __init__(self,name,age,phone,type_of_p,doj,email,marks):\n",
+    "        super().__init__(name,age,phone,type_of_p,doj)\n",
+    "        self.email=email\n",
+    "        self.marks=marks\n",
+    "    def display(self):\n",
+    "        super().display()\n",
+    "        print('person email:',self.email)\n",
+    "        print('person marks:',self.marks)\n",
+    "\n",
+    "raj=college3('raj',22,7987131,'student','23/5/2020','raj@gmail.com',98)\n",
+    "rani=college3('rani',20,7987131779,'tariner','23/5/2015','rani@gmail.com',77)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "collage name: vikas\n",
+      "collage address: mysure\n",
+      "person name: rani\n",
+      "person phone: 7987131779\n",
+      "person age: 20\n",
+      "person type_of_p: tariner\n",
+      "person doj: 23/5/2015\n",
+      "person email: rani@gmail.com\n",
+      "person marks: 77\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ram.display()\n",
+    "# stu1.display()\n",
+    "# raj.display()\n",
+    "rani.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 20 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "#MULTIPLE inheritance\n",
+    "class p1:\n",
+    "    a=100\n",
+    "    b=20\n",
+    "\n",
+    "class p2:\n",
+    "    a=400\n",
+    "    d=60\n",
+    "\n",
+    "class c(p1,p2):\n",
+    "    pass\n",
+    "\n",
+    "print(c.a,c.b,c.d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400 20 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "#MULTIPLE inheritance\n",
+    "class p1:\n",
+    "    a=100\n",
+    "    b=20\n",
+    "\n",
+    "class p2:\n",
+    "    a=400\n",
+    "    d=60\n",
+    "\n",
+    "class c(p2,p1):\n",
+    "    pass\n",
+    "\n",
+    "print(c.a,c.b,c.d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 20 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "class p1:\n",
+    "    a=100\n",
+    "    b=20\n",
+    "    def display(self):\n",
+    "        print(self.a,self.b)\n",
+    "\n",
+    "class p2:\n",
+    "    a=400\n",
+    "    d=60\n",
+    "    def display(self):\n",
+    "        print(self.a,self.b)\n",
+    "\n",
+    "class c(p1,p2):\n",
+    "    def display(self):\n",
+    "        print(c.a,c.b,c.d)\n",
+    "\n",
+    "obj=c()\n",
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parent1: 100 20\n",
+      "parent2: 100 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class p1:\n",
+    "    a=100\n",
+    "    b=20\n",
+    "    def display1(self):\n",
+    "        print('parent1:',self.a,self.b)\n",
+    "\n",
+    "class p2:\n",
+    "    a=400\n",
+    "    d=60\n",
+    "    def display2(self):\n",
+    "        print('parent2:',self.a,self.b)\n",
+    "\n",
+    "class c(p1,p2):\n",
+    "    def display(self):\n",
+    "        super().display1()\n",
+    "        super().display2()\n",
+    "\n",
+    "obj=c()\n",
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parent1: 100 20\n",
+      "parent1: 100 20\n",
+      "parent2: 100 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class p1:\n",
+    "    a=100\n",
+    "    b=20\n",
+    "    def display(self):\n",
+    "        print('parent1:',self.a,self.b)\n",
+    "\n",
+    "class p2:\n",
+    "    a=400\n",
+    "    d=60\n",
+    "    def display(self):\n",
+    "        print('parent2:',self.a,self.b)\n",
+    "\n",
+    "class c(p1,p2):\n",
+    "    def display(self):\n",
+    "        super().display()\n",
+    "        super().display()   # super():it will point to first priority class functions only . if the names(variables/methods/contructors) are same in both the classess\n",
+    "        p2.display(self)\n",
+    "\n",
+    "obj=c()\n",
+    "obj.display()"
    ]
   }
  ],
