--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -10,7 +10,7 @@
     ". It is used for storing and manipulating the real-time entity data.\n",
     ". As we are working with real world entities, the built in data-types are not sufficient, enough to store the details of real world entities and\n",
     "  because real world entities will have various types, various properties, various structure, various functionality are present, this all are not suitable to store or retrieve the information by using built-in data-types.\n",
-    ". So that we are goung to use the user-defined data-types called class and object\n",
+    ". So that we are going to use the user-defined data-types called class and object\n",
     ". through class and object, we are creating our own status(properties) and behaviour (functionalities) related to real world entities.\n",
     "\n",
     "why OOPS?\n",
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -749,15 +749,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "imran 100 88239829 jkl74jkl@gmail.com\n",
-      "imran 100 88239829 jkl74jkl@gmail.com\n",
+      "jald 100 88239829 jkl74jkl@gmail.com\n",
+      "kjl 100 88239829 jkl74jkl@gmail.com\n",
       "{'name': 'imran', 'age': 100, 'phone': 88239829, 'email': 'jkl74jkl@gmail.com'}\n"
      ]
     }
@@ -769,9 +769,10 @@
     "        self.age=s_age\n",
     "        self.phone=s_phone\n",
     "        self.email=s_email\n",
+    "        # self.display()\n",
     "    def display(self):\n",
     "        print(imran.name,imran.age,imran.phone,imran.email)\n",
-    "    display(imran)\n",
+    "    collage.display(imran)\n",
     "    def modify(self):\n",
     "        n=int(input('choose 1.name\\n2.age\\n3.phone\\n4.email\\n5.exit'))\n",
     "        match n:\n",
@@ -1973,6 +1974,227 @@
     "\n",
     "obj=c()\n",
     "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "17/11/23.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.customer at 0x19dd571b400>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class customer:\n",
+    "    cust_count=0\n",
+    "    cust_details={}\n",
+    "    def __init__(self,name,age,email,phone,address,adhaar):\n",
+    "        # print(self)\n",
+    "        self.c_name=name\n",
+    "        self.c_age=age\n",
+    "        self.c_email=email\n",
+    "        self.c_phone=phone\n",
+    "        self.c_address=address\n",
+    "        self.c_adhaar=adhaar\n",
+    "        self.inc_cust_count()\n",
+    "        self.cust_id=1560+self.cust_count\n",
+    "        self.concat_cust(self.cust_id,self)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def inc_cust_count(cls):\n",
+    "        cls.cust_count+=1\n",
+    "\n",
+    "    @classmethod\n",
+    "    def concat_cust(cls,id,self):\n",
+    "        cls.cust_details[id]=self\n",
+    "\n",
+    "customer('rahul',23,'rahul@gmail.com',7394875304,'viz',293847593847)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MOBILE', 'LAPTOP', 'SMARTWATCH', 'SMART TV\"S']\n",
+      "NO PRODUCT FOUND\n"
+     ]
+    }
+   ],
+   "source": [
+    "class product:\n",
+    "    prod_count=0\n",
+    "    prod_details={}\n",
+    "    def __init__(self,type_of_prod,name,desc,price,discount,quantity,dom,doe):\n",
+    "        self.type_of_prod=type_of_prod\n",
+    "        self.p_name=name\n",
+    "        self.p_desc=desc\n",
+    "        self.p_price=price\n",
+    "        self.p_discount=discount\n",
+    "        self.p_quantity=quantity\n",
+    "        self.p_dom=dom\n",
+    "        self.p_doe=doe\n",
+    "        self.inc_prod_count()\n",
+    "        self.prod_id=7560+self.prod_count\n",
+    "        self.concat_prod(self.prod_id,self)\n",
+    "        # self.display_prod_details()\n",
+    "\n",
+    "    @classmethod\n",
+    "    def inc_prod_count(cls):\n",
+    "        cls.prod_count+=1\n",
+    "\n",
+    "    @classmethod\n",
+    "    def concat_prod(cls,id,self):\n",
+    "        cls.prod_details[id]=self\n",
+    "\n",
+    "    def change_discount(self):\n",
+    "        self.p_discount+= int(input('enter the new discount values:'))\n",
+    "\n",
+    "    def change_inc_quantity(self):\n",
+    "        self.p_quantity+=int(input('enter the new quantity value:'))\n",
+    "\n",
+    "    def change_dec_quantity(self):\n",
+    "        self.p_quantity -=int(input('enter the buying quantity value:'))\n",
+    "\n",
+    "    @classmethod\n",
+    "    def display_prod_details(cls):\n",
+    "        p_list=cls.prod_details\n",
+    "        print('product_id','type_of_prod','name','desc','price','discount','quantity','dom','doe',sep=' | ')\n",
+    "        for i in p_list:\n",
+    "            print(p_list[i].prod_id,p_list[i].type_of_prod,p_list[i].p_name,\n",
+    "                  p_list[i].p_desc,\n",
+    "                  p_list[i].p_price,\n",
+    "                  p_list[i].p_discount,\n",
+    "                  p_list[i].p_quantity,\n",
+    "                  p_list[i].p_dom,\n",
+    "                  p_list[i].p_doe,sep=' | ')\n",
+    "    @classmethod\n",
+    "    def search(cls):\n",
+    "        find=input('Search')\n",
+    "        for i in cls.prod_details:\n",
+    "            var=0\n",
+    "            if find.upper()==cls.prod_details[i].type_of_prod.upper():\n",
+    "                print(cls.prod_details[i].__dict__)\n",
+    "                var+=1\n",
+    "        if var==0:\n",
+    "            print('NO PRODUCT FOUND')\n",
+    "\n",
+    "    @classmethod\n",
+    "    def unique_type_prods(cls):\n",
+    "        uni=[]\n",
+    "        for i in cls.prod_details:\n",
+    "            if cls.prod_details[i].type_of_prod.upper() not in uni:\n",
+    "                uni+=[cls.prod_details[i].type_of_prod.upper()]\n",
+    "        print(uni)\n",
+    "        product.search()\n",
+    "        # for i in cls.prod_details:\n",
+    "        #     if uni[1]==cls.prod_details[i].type_of_prod.upper():\n",
+    "        #         print(cls.prod_details[i].__dict__)\n",
+    "        #         for j in cls.prod_details[i].__dict__:\n",
+    "        #             print(j,cls.prod_details[i].__dict__[j],sep='---------->')\n",
+    "    \n",
+    "p1=product('mobile','iphone14','iphone14 pro',145000,10,15,'2023-05-06',None)\n",
+    "p2=product('laptop','hp','iphone14 pro',145000,10,15,'2023-05-06',None)\n",
+    "p3=product('Laptop','dell','iphone14 pro',145000,10,15,'2023-05-06',None)\n",
+    "p4=product('smartwatch','noise','noise pro',145000,10,15,'2023-05-06',None)\n",
+    "p5=product('smart tv\"s','oneplus','oneplus 14',145000,10,15,'2023-05-06',None)\n",
+    "\n",
+    "product.unique_type_prods()\n",
+    "# print(product.prod_details[7561].type_of_prod.upper())\n",
+    "# for i in product.prod_details[7561].__dict__:\n",
+    "    # print(i)\n",
+    "# for i in p3.__dict__:\n",
+    "#     print(i,p3.__dict__[i],sep='          ')\n",
+    "# print(product.prod_details)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type_of_prod': 'mobile',\n",
+       " 'p_name': 'iphone14',\n",
+       " 'p_desc': 'iphone14 pro',\n",
+       " 'p_price': 145000,\n",
+       " 'p_discount': 10,\n",
+       " 'p_quantity': 15,\n",
+       " 'p_dom': '2023-05-06',\n",
+       " 'p_doe': None,\n",
+       " 'prod_id': 7561}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "product.prod_details[7561].__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.seller at 0x19dd58b1ab0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class seller:\n",
+    "    seller_count=0\n",
+    "    seller_details={}\n",
+    "    def __init__(self,name,age,email,phone,address,adhaar,type_of_seller,type_of_prod,pname,desc,price,discount,quantity,dom,doe):\n",
+    "        self.type_of_seller=type_of_seller\n",
+    "        cust=customer(name,age,email,phone,address,adhaar)\n",
+    "        prod=product(type_of_prod,pname,desc,price,discount,quantity,dom,doe)\n",
+    "        self.cust_id=cust.cust_id\n",
+    "        self.prod_id=prod.prod_id\n",
+    "        self.inc_seller_count()\n",
+    "        self.seller_id=9950+self.seller_count\n",
+    "        self.concate_seller(self.seller_id,self)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def inc_seller_count(cls):\n",
+    "        cls.seller_count+=1\n",
+    "\n",
+    "    @classmethod\n",
+    "    def concate_seller(cls,id,self):\n",
+    "        cls.seller_details[id]=self\n",
+    "\n",
+    "\n",
+    "seller('mohan',39,'mohan@gmail.com',9875412123,'hyd',1356789741,'whole-sale','laptop','hp','hp-15s',50000,10,15,'15-11-2023','15-11-2028')"
    ]
   }
  ],
