--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        " 'rom': '128gb'}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,14 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cname': 'oneplus 11', 'model': '+11', 'price': 39000, 'ram': '8gb', 'rom': '256gb'}\n",
+      "{}\n",
       "oneplus  {'cname': 'oneplus ', 'model': '+13', 'price': 50000, 'ram': '16gb', 'rom': '512gb'}\n"
      ]
     }
@@ -255,7 +255,8 @@
     "        self.rom=m_rom\n",
     "        print(self.cname,self.__dict__)\n",
     "obj3=mobile()\n",
-    "create(obj2,'oneplus ','+13',50000,'16gb','512gb')\n",
+    "mobile.create(obj3,'oneplus ','+13',50000,'16gb','512gb')    #calling by class name\n",
+    "# obj3.create('oneplus ','+13',50000,'16gb','512gb')            #calling by object name\n",
     "# print(mobile())"
    ]
   },
@@ -494,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +515,7 @@
     "    def display(cls):\n",
     "        print(cls.cname,cls.subjects)\n",
     "collage.display()\n",
-    "# display(collage)  -----/\n"
+    "# display(collage) # -----/\n"
    ]
   },
   {
@@ -1188,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1208,7 @@
        " 'bal': 500}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,6 +1235,7 @@
     "        self.address=address\n",
     "        self.pin=pin\n",
     "        self.bal=bal\n",
+    "        # self.bname=self.bname\n",
     "        # self.no_cust1()\n",
     "        # self.acc_no=500+self.no_cust\n",
     "obj=bank('imran',24,'jkl74jkl@gmail.com',9948711089,'HYD',355232637942,'sdf4578r4','05/01/48','male',7777,500)\n",
@@ -1585,15 +1587,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'__module__': '__main__', 'a': 10, '__init__': <function parent.__init__ at 0x0000025B7B0EF490>, '__dict__': <attribute '__dict__' of 'parent' objects>, '__weakref__': <attribute '__weakref__' of 'parent' objects>, '__doc__': None}\n",
-      "{'x': 150}\n",
+      "{'__module__': '__main__', 'a': 10, '__init__': <function parent.__init__ at 0x000001F0E3CDC940>, '__dict__': <attribute '__dict__' of 'parent' objects>, '__weakref__': <attribute '__weakref__' of 'parent' objects>, '__doc__': None}\n",
+      "{'x': 54}\n",
       "{'__module__': '__main__', 'b': 20, '__doc__': None}\n",
       "{'x': 256}\n",
       "{'__module__': '__main__', 'c': 30, '__doc__': None}\n",
@@ -1607,7 +1609,7 @@
     "    a=10\n",
     "    def __init__(self,x):\n",
     "        self.x=x\n",
-    "xyz=parent(150)\n",
+    "xyz=parent(54)\n",
     "\n",
     "print(parent.__dict__)\n",
     "print(xyz.__dict__)\n",
@@ -1624,7 +1626,7 @@
     "mno=grandchild(490)\n",
     "\n",
     "print(grandchild.__dict__)\n",
-    "# print(grandchild.a,grandchild.b,grandchild.c)\n",
+    "print(grandchild.a,grandchild.b,grandchild.c)\n",
     "print(mno.__dict__)"
    ]
   },
@@ -1726,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1770,7 @@
     "\n",
     "\n",
     "class college3(college):\n",
-    "    address='mysure'\n",
+    "    address='honkong'\n",
     "    def __init__(self,name,age,phone,type_of_p,doj,email,marks):\n",
     "        super().__init__(name,age,phone,type_of_p,doj)\n",
     "        self.email=email\n",
@@ -1779,12 +1781,13 @@
     "        print('person marks:',self.marks)\n",
     "\n",
     "raj=college3('raj',22,7987131,'student','23/5/2020','raj@gmail.com',98)\n",
-    "rani=college3('rani',20,7987131779,'tariner','23/5/2015','rani@gmail.com',77)"
+    "rani=college3('rani',20,7987131779,'tariner','23/5/2015','rani@gmail.com',77)\n",
+    "# raj.__dict__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1795,16 @@
      "output_type": "stream",
      "text": [
       "collage name: vikas\n",
-      "collage address: mysure\n",
+      "collage address: honkong\n",
+      "person name: raj\n",
+      "person phone: 7987131\n",
+      "person age: 22\n",
+      "person type_of_p: student\n",
+      "person doj: 23/5/2020\n",
+      "person email: raj@gmail.com\n",
+      "person marks: 98\n",
+      "collage name: vikas\n",
+      "collage address: honkong\n",
       "person name: rani\n",
       "person phone: 7987131779\n",
       "person age: 20\n",
@@ -1804,6 +1816,7 @@
     }
    ],
    "source": [
+    "# college3.display(raj)\n",
     "# ram.display()\n",
     "# stu1.display()\n",
     "# raj.display()\n",
@@ -1985,16 +1998,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.customer at 0x19dd571b400>"
+       "<__main__.customer at 0x1f0e2939e10>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2090,8 +2103,8 @@
     "    @classmethod\n",
     "    def search(cls):\n",
     "        find=input('Search')\n",
+    "        var=0\n",
     "        for i in cls.prod_details:\n",
-    "            var=0\n",
     "            if find.upper()==cls.prod_details[i].type_of_prod.upper():\n",
     "                print(cls.prod_details[i].__dict__)\n",
     "                var+=1\n",
