--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -662,23 +662,13 @@
       "1\n",
       "1\n",
       "2\n",
-      "3\n",
-      "5\n",
-      "8\n",
-      "13\n",
-      "21\n",
-      "34\n",
-      "55\n",
-      "89\n",
-      "144\n",
-      "233\n",
-      "377\n"
+      "3\n"
      ]
     }
    ],
    "source": [
     "# print the first 10 febonacci series numbers\n",
-    "n=15\n",
+    "n=5\n",
     "f=0\n",
     "s=1\n",
     "i=0\n",
@@ -690,6 +680,54 @@
     "        f,s=s,res\n",
     "    i+=1\n",
     "    print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24157817\n"
+     ]
+    }
+   ],
+   "source": [
+    "def feb(num):\n",
+    "    if num<=1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return feb(num-2)+feb(num-1) #increase in time complexity\n",
+    "print(feb(36))                       #takes more time for solving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75025\n",
+      "{0: 1, 1: 1, 2: 2, 3: 3, 4: 5, 5: 8, 6: 13, 7: 21, 8: 34, 9: 55, 10: 89, 11: 144, 12: 233, 13: 377, 14: 610, 15: 987, 16: 1597, 17: 2584, 18: 4181, 19: 6765, 20: 10946, 21: 17711, 22: 28657, 23: 46368, 24: 75025}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def febonacy(num,dic):\n",
+    "    if num  in dic:\n",
+    "        return dic[num]\n",
+    "    else:\n",
+    "        dic[num]=febonacy(num-2,dic)+febonacy(num-1,dic) #increase in space-complixity\n",
+    "        return dic[num]                                  #takes more storage(memory) \n",
+    "dic={0:1,1:1}\n",
+    "print(febonacy(24,dic))\n",
+    "print(dic)"
    ]
   },
   {
