--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -2209,6 +2209,16 @@
     "\n",
     "seller('mohan',39,'mohan@gmail.com',9875412123,'hyd',1356789741,'whole-sale','laptop','hp','hp-15s',50000,10,15,'15-11-2023','15-11-2028')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "20/11/2023 02:40 AM\n",
+    "in IDLE:type\n",
+    "import Imran from Imran\n",
+    "create_variable_as=Imran()"
+   ]
   }
  ],
  "metadata": {
