--- a/py_course/functional_pro/test.ipynb
+++ b/py_course/functional_pro/test.ipynb
@@ -108,7 +108,8 @@
     "\n",
     "        case 5:\n",
     "            student.change_phone()\n",
-    "school()\n"
+    "school()\n",
+    "# print(student.s_phone)\n"
    ]
   }
  ],
