--- a/py_course/new.ipynb
+++ b/py_course/new.ipynb
@@ -101,6 +101,45 @@
     "n = int(input(\"Enter the value of n: \"))\n",
     "print(f\"The {n}th prime number is: {nth_prime(n)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.new object at 0x000002C28740C790>\n",
+      "<__main__.new object at 0x000002C2861DFF10>\n",
+      "<__main__.new object at 0x000002C28740C790>\n",
+      "-----------------------\n",
+      "<__main__.new object at 0x000002C28740C790>\n",
+      "<__main__.new object at 0x000002C2861DFF10>\n",
+      "<__main__.new object at 0x000002C2861DFF70>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class new:\n",
+    "    __a=20\n",
+    "    __b=40\n",
+    "    def __init__(self):\n",
+    "        self.name='name'\n",
+    "print(new())\n",
+    "# print('sdf')\n",
+    "print(new())\n",
+    "# print('jlj')\n",
+    "print(new())\n",
+    "print('-----------------------')\n",
+    "a=new()\n",
+    "b=new()\n",
+    "c=new()\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
   }
  ],
  "metadata": {
