--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -2219,6 +2219,132 @@
     "import Imran from Imran\n",
     "create_variable_as=Imran()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "invalid email\n",
+      "customer registration is success\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'c_email': 'imran@gmail..com', 'cust_id': 1561}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#21/11/23\n",
+    "class customer:\n",
+    "    cust_count=0\n",
+    "    cust_details={}\n",
+    "    def __init__(self):\n",
+    "        self.c_name=self.cname()\n",
+    "        self.c_age=self.cage()\n",
+    "        self.c_email=self.cemail()\n",
+    "        self.c_phone=self.cphone()\n",
+    "        self.c_address=self.caddress()\n",
+    "        self.c_adhaar=self.cadhaar()\n",
+    "        self.inc_cust_count()\n",
+    "        self.cust_id=1560+self.cust_count\n",
+    "        self.concat_cust(self.cust_id,self)\n",
+    "        self.csuccess()\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def caddress():\n",
+    "        return input('enter the address')\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def csuccess():\n",
+    "        print('customer registration is success')\n",
+    "\n",
+    "    @classmethod\n",
+    "    def inc_cust_count(cls):\n",
+    "        cls.cust_count+=1\n",
+    "\n",
+    "    @classmethod\n",
+    "    def concat_cust(cls,id,self):\n",
+    "        cls.cust_details[id]=self\n",
+    "\n",
+    "    @classmethod\n",
+    "    def cname(cls):\n",
+    "        name=input('enter the username:')\n",
+    "        if not(3<=len(name)<=16):\n",
+    "            print('username should be min 3 and max 16 characters')\n",
+    "            return cls.cname()\n",
+    "        elif not(name.isalpha()):\n",
+    "            print('username should be alphabets')\n",
+    "            return cls.cname()\n",
+    "        else:\n",
+    "            return name.upper()\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def cphone(cls):\n",
+    "        phone=input('enter the phone')\n",
+    "        if not(len(phone)==10):\n",
+    "            print('phone number should be 10 digits')\n",
+    "            return cls.cphone()\n",
+    "        elif not(phone[0] in '9876'):\n",
+    "            print('phone number starts with either 9,8,7,6')\n",
+    "            return cls.cphone()\n",
+    "        elif not(phone.isnumeric()):\n",
+    "            print('phone number should be digits')\n",
+    "            return cls.cphone()\n",
+    "        else:\n",
+    "            return int(phone)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def cadhaar(cls):\n",
+    "        adhaar=input('enter the adhaar:')\n",
+    "        if not (len(adhaar)==12):\n",
+    "            print('adhaar number should be 12 digits')\n",
+    "            return cls.cadhaar()\n",
+    "        elif not(adhaar.isnumeric()):\n",
+    "            print('adhaar number should be digits')\n",
+    "            return cls.cadhaar()\n",
+    "        else:\n",
+    "            return int(adhaar)\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def cage(cls):\n",
+    "        age=eval(input('enter the age:'))\n",
+    "        if not(18<=age<=80):\n",
+    "            print('age should be min 18 and max 80 years')\n",
+    "            return cls.cage()\n",
+    "        else:\n",
+    "            return age\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def cemail(cls):\n",
+    "        email=input('enter the email:')\n",
+    "        if not(email[0].isalpha()):\n",
+    "            print('email starting character should be alphabet')\n",
+    "            return cls.cemail()\n",
+    "        elif not(8<=len(email)<=25):\n",
+    "            print('email should be min 8 and max 25 characters')\n",
+    "            return cls.cemail()\n",
+    "        elif not('@' in email and email.count('@')==1 and '.' in email[email.index('@'):] and '.' not in email[:email.index('@')] and 1<=email.count('.')<=3):\n",
+    "            print('invalid email')\n",
+    "            return cls.cemail()\n",
+    "        elif len([i for i in email if not('A'<=i<='Z' or 'a'<=i<='z' or '0'<=i<='9' or i in '@_.')]):\n",
+    "            print('in email should not be a special characters')\n",
+    "            return cls.cemail()\n",
+    "        else:\n",
+    "            return email\n",
+    "        \n",
+    "customer().__dict__"
+   ]
   }
  ],
  "metadata": {
